added main section content

--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,9 @@
 
     <div>
         <section>
-            
+            <h2>Angel Vazquez</h2>
+            <img src="https://via.placeholder.com/200" alt="picture of developer">
+            <p>Hello my name is Angel Vazquez i am a student at Vero Beach High school, i love to play sports and video games.</p>
         </section>
 
         <section>
