contact section done

--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,12 @@
         </section>
 
         <section>
-
+            <h2>contact</h2>
+            <ul>
+                <li> <strong> Email:</strong> <a href="mailto:angel.vazquez@sdirc.org">angel.vazquez@sdirc.org</a> </li>
+                <li> <strong>Github:</strong> <a href="https://github.com/vazqueza04">vazqueza04</a> </li>
+                <li> <strong>Portfolio:</strong> <a href="#">coming soon</a> </li>
+            </ul>
         </section>
     </div>
 </body>
